Faster menu transition, and fix for z-index (so menu covers slider controls)

--- a/dspace/modules/xmlui/src/main/webapp/themes/uiDesign/files/superfish.css
+++ b/dspace/modules/xmlui/src/main/webapp/themes/uiDesign/files/superfish.css
@@ -35,7 +35,7 @@
 .sf-menu li.sfHover ul {
 	left:			0;
 	top:			2.5em; /* match top ul list item height */
-	z-index:		99;
+    z-index: 10000;        /* float above slider controls (.bx-next, etc) */
 }
 ul.sf-menu li:hover li ul,
 ul.sf-menu li.sfHover li ul {
